src/objects/featfinder__Release__c.object
<CustomObject>
    <fields>
        <fullName>featfinder__Number_of_features__c</fullName>
        <label>Number of features</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>featfinder__Release_Notes_URL_PDF__c</fullName>
        <label>Release Notes URL (PDF)</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>featfinder__Release_logo__c</fullName>
        <label>Release logo</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>featfinder__icon_url__c</fullName>
        <label>icon url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>featfinder__isLatest__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLatest</label>
        <type>Checkbox</type>
    </fields>
    <label>Release</label>
    <nameField>
        <label>Release Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>